--- a/Oppgave 10.04 Kalkulator design/style.css
+++ b/Oppgave 10.04 Kalkulator design/style.css
@@ -11,15 +11,19 @@ body {
     max-width: 426px;
     max-height: 426px;
     background-color: crimson;
-    
+    padding: 2rem;
+    border-radius:1rem;
+    border: 3px solid #000000;
+    border-radius: 10px;        
 }
 
 .buttons {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin: 1rem;
+    
     padding: 1rem;
     gap: 1rem;
+
 }
 
 .number{
@@ -47,6 +51,8 @@ body {
     border-radius: 5%;
     min-width: 360px;
     min-height: 50px;
+    margin-bottom: 1rem;
+    
 }
 
 #kalkulator button {
